// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pet Instance Page Text Properly Rendered 1`] = `
<div>
  <div
    style={
      Object {
        "paddingLeft": "20vw",
        "paddingRight": "20vw",
      }
    }
  >
    <div
      className="row"
    >
      <img
        className="img-fluid"
        src=""
        style={
          Object {
            "height": "750px",
            "width": "100%",
          }
        }
      />
    </div>
  </div>
  <div
    style={
      Object {
        "paddingLeft": "20vw",
        "paddingRight": "20vw",
        "paddingTop": "4vh",
      }
    }
  >
    <div
      className="card"
      style={
        Object {
          "backgroundColor": "#00008b",
          "color": "white",
          "width": "60vw",
        }
      }
    >
      <div
        className="card-body"
      >
        <div
          className="card-title h5"
          style={
            Object {
              "fontSize": "8vh",
            }
          }
        >
          German Sheperd
        </div>
        <div
          className="mb-2 text-muted card-subtitle h6"
          style={
            Object {
              "fontSize": "4vh",
            }
          }
        >
          Max
        </div>
        <p
          className="card-text"
        >
          <div
            className="container"
          >
            <div
              className="row"
            >
              <div
                className="list-group list-group-flush"
                onKeyDown={[Function]}
              >
                <div
                  className="list-group-item"
                  data-rr-ui-event-key={null}
                  onClick={[Function]}
                >
                  Size : 
                  large
                </div>
                <div
                  className="list-group-item"
                  data-rr-ui-event-key={null}
                  onClick={[Function]}
                >
                  Age : 
                  5
                </div>
                <div
                  className="list-group-item"
                  data-rr-ui-event-key={null}
                  onClick={[Function]}
                >
                  Color : 
                  Grey/Black
                </div>
                <div
                  className="list-group-item"
                  data-rr-ui-event-key={null}
                  onClick={[Function]}
                >
                  Sex : 
                  M
                </div>
              </div>
            </div>
            <div
              className="row"
              style={
                Object {
                  "paddingTop": "2vh",
                }
              }
            >
              <h4>
                Description
              </h4>
              Warm and loyal friend
            </div>
          </div>
        </p>
        <div
          className="row"
        >
          <h4>
            Adoption Center Location
          </h4>
          <div
            style={
              Object {
                "height": "100vh",
                "width": "100vw",
              }
            }
          >
            <div
              style={
                Object {
                  "height": "100%",
                }
              }
            />
          </div>
        </div>
        <div
          className="row"
          style={
            Object {
              "paddingTop": "2vh",
            }
          }
        >
          <div
            className="col"
          >
            <button
              className="btn btn-link"
              disabled={false}
              onClick={[Function]}
              style={
                Object {
                  "color": "#add8e6",
                  "textDecoration": "none",
                }
              }
              type="button"
            >
              <h5>
                Breed Information Page
              </h5>
            </button>
          </div>
          <div
            className="col"
          >
            <button
              className="btn btn-link"
              disabled={false}
              onClick={[Function]}
              style={
                Object {
                  "color": "#add8e6",
                  "textDecoration": "none",
                }
              }
              type="button"
            >
              <h5>
                This pet is at the 
                Cat Rescue of Maryland, Inc.
              </h5>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Pet Instance Page Text and Image Properly Rendered 1`] = `
<div>
  <div
    style={
      Object {
        "paddingLeft": "20vw",
        "paddingRight": "20vw",
      }
    }
  >
    <div
      className="row"
    >
      <img
        className="img-fluid"
        src="beagle_1.jpg"
        style={
          Object {
            "height": "750px",
            "width": "100%",
          }
        }
      />
    </div>
  </div>
  <div
    style={
      Object {
        "paddingLeft": "20vw",
        "paddingRight": "20vw",
        "paddingTop": "4vh",
      }
    }
  >
    <div
      className="card"
      style={
        Object {
          "backgroundColor": "#00008b",
          "color": "white",
          "width": "60vw",
        }
      }
    >
      <div
        className="card-body"
      >
        <div
          className="card-title h5"
          style={
            Object {
              "fontSize": "8vh",
            }
          }
        >
          German Sheperd
        </div>
        <div
          className="mb-2 text-muted card-subtitle h6"
          style={
            Object {
              "fontSize": "4vh",
            }
          }
        >
          Max
        </div>
        <p
          className="card-text"
        >
          <div
            className="container"
          >
            <div
              className="row"
            >
              <div
                className="list-group list-group-flush"
                onKeyDown={[Function]}
              >
                <div
                  className="list-group-item"
                  data-rr-ui-event-key={null}
                  onClick={[Function]}
                >
                  Size : 
                  large
                </div>
                <div
                  className="list-group-item"
                  data-rr-ui-event-key={null}
                  onClick={[Function]}
                >
                  Age : 
                  5
                </div>
                <div
                  className="list-group-item"
                  data-rr-ui-event-key={null}
                  onClick={[Function]}
                >
                  Color : 
                  Grey/Black
                </div>
                <div
                  className="list-group-item"
                  data-rr-ui-event-key={null}
                  onClick={[Function]}
                >
                  Sex : 
                  M
                </div>
              </div>
            </div>
            <div
              className="row"
              style={
                Object {
                  "paddingTop": "2vh",
                }
              }
            >
              <h4>
                Description
              </h4>
              Warm and loyal friend
            </div>
          </div>
        </p>
        <div
          className="row"
        >
          <h4>
            Adoption Center Location
          </h4>
          <div
            style={
              Object {
                "height": "100vh",
                "width": "100vw",
              }
            }
          >
            <div
              style={
                Object {
                  "height": "100%",
                }
              }
            />
          </div>
        </div>
        <div
          className="row"
          style={
            Object {
              "paddingTop": "2vh",
            }
          }
        >
          <div
            className="col"
          >
            <button
              className="btn btn-link"
              disabled={false}
              onClick={[Function]}
              style={
                Object {
                  "color": "#add8e6",
                  "textDecoration": "none",
                }
              }
              type="button"
            >
              <h5>
                Breed Information Page
              </h5>
            </button>
          </div>
          <div
            className="col"
          >
            <button
              className="btn btn-link"
              disabled={false}
              onClick={[Function]}
              style={
                Object {
                  "color": "#add8e6",
                  "textDecoration": "none",
                }
              }
              type="button"
            >
              <h5>
                This pet is at the 
                Cat Rescue of Maryland, Inc.
              </h5>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
